src/srv/snapshots/walls_rust__srv__parser__tests__snapshots-30.snap
---
source: src/srv/parser_test.rs
expression: "&parse(\"#units d\")"
---
INVALID:
  items:
    - INVALID:
        loc: "#units d"
        locs:
          directive: "#units"
        options:
          - INVALID:
              locs:
                option: d
              option: PrimaryDistanceUnit
            issues:
              - 0
        type: UnitsDirective
issues:
  - code: EMISSINGVALUE
    loc: ""
    message: Missing =
    severity: Error
