src/srv/snapshots/walls_rust__srv__parser__tests__snapshots-300.snap
---
source: src/srv/parser_test.rs
expression: "&parse(\"#units typeab=c,3.,\")"
---
INVALID:
  items:
    - INVALID:
        loc: "#units typeab=c,3.,"
        locs:
          directive: "#units"
        options:
          - INVALID:
              do_not_average:
                INVALID: ""
                issues:
                  - 0
              is_corrected: true
              loc: "typeab=c,3.,"
              locs:
                do_not_average: ""
                is_corrected: c
                option: typeab
                tolerance: "3."
              option: BacksightAzimuthType
              tolerance:
                unit: Degrees
                value: 3
        type: UnitsDirective
issues:
  - code: EMISSINGDONOTAVERAGE
    loc: ""
    message: Missing do not average flag
    severity: Error
