src/srv/snapshots/walls_rust__srv__parser__tests__snapshots-302.snap
---
source: src/srv/parser_test.rs
expression: "&parse(\"#units typeab=c,3.,q\")"
---
INVALID:
  items:
    - INVALID:
        loc: "#units typeab=c,3.,q"
        locs:
          directive: "#units"
        options:
          - INVALID:
              do_not_average:
                INVALID: q
                issues:
                  - 0
              is_corrected: true
              loc: "typeab=c,3.,q"
              locs:
                do_not_average: q
                is_corrected: c
                option: typeab
                tolerance: "3."
              option: BacksightAzimuthType
              tolerance:
                unit: Degrees
                value: 3
        type: UnitsDirective
issues:
  - code: EINVALIDDONOTAVERAGE
    loc: q
    message: Invalid do not average flag
    severity: Error
