src/srv/snapshots/walls_rust__srv__parser__tests__snapshots-306.snap
---
source: src/srv/parser_test.rs
expression: "&parse(\"#units typevb=\")"
---
INVALID:
  items:
    - INVALID:
        loc: "#units typevb="
        locs:
          directive: "#units"
        options:
          - INVALID:
              loc: typevb
              locs:
                option: typevb
              option: BacksightInclinationType
            issues:
              - 0
        type: UnitsDirective
issues:
  - code: EMISSINGVALUE
    loc: ""
    message: Missing backsight options
    severity: Error
