src/srv/snapshots/walls_rust__srv__parser__tests__snapshots-307.snap
---
source: src/srv/parser_test.rs
expression: "&parse(\"#units typevb=n\")"
---
items:
  - loc: "#units typevb=n"
    locs:
      directive: "#units"
    options:
      - do_not_average: false
        is_corrected: false
        loc: typevb=n
        locs:
          is_corrected: n
          option: typevb
        option: BacksightInclinationType
        tolerance:
          unit: Degrees
          value: 5
    type: UnitsDirective
