src/srv/snapshots/walls_rust__srv__parser__tests__snapshots-308.snap
---
source: src/srv/parser_test.rs
expression: "&parse(\"#units typevb=N\")"
---
items:
  - loc: "#units typevb=N"
    locs:
      directive: "#units"
    options:
      - do_not_average: false
        is_corrected: false
        loc: typevb=N
        locs:
          is_corrected: N
          option: typevb
        option: BacksightInclinationType
        tolerance:
          unit: Degrees
          value: 5
    type: UnitsDirective
