src/srv/snapshots/walls_rust__srv__parser__tests__snapshots-309.snap
---
source: src/srv/parser_test.rs
expression: "&parse(\"#units typevb=c\")"
---
items:
  - loc: "#units typevb=c"
    locs:
      directive: "#units"
    options:
      - do_not_average: false
        is_corrected: true
        loc: typevb=c
        locs:
          is_corrected: c
          option: typevb
        option: BacksightInclinationType
        tolerance:
          unit: Degrees
          value: 5
    type: UnitsDirective
